--- a/packages/theme-chalk/step.scss
+++ b/packages/theme-chalk/step.scss
@@ -8,11 +8,18 @@
   flex-shrink: 1;
   flex-basis: 50%;
   @include pseudo(last-of-type) {
-    @include e(line) {
-      // display: none;
+    // @include e(line) {
+    //   display: none;
+    //   color: red;
+    // }
+    // TODO:这个e写得有问题，涉及到transfer组件的
+    #{".tp-step__line"} {
+      display: none;
       background-color: red;
     }
-
+    flex-basis: auto !important;
+    flex-shrink: 0;
+    flex-grow: 0;
     // // 只有未设置 space 的情况下才自适应宽度
     // @include when(flex) {
     //   flex-basis: auto !important;
@@ -83,30 +90,85 @@
     flex-direction: column;
     align-items: stretch;
     flex-grow: 1;
-  }
+    @include e(title) {
+      font-size: 16px;
+      line-height: 38px;
 
+      @include when(process) {
+        font-weight: 700;
+        font-weight: bold;
+        color: $--color-black;
+      }
+
+      @include when(wait) {
+        color: $--color-info;
+      }
+
+      @include when(success) {
+        color: $--color-success;
+      }
+
+      @include when(error) {
+        color: $--color-warning;
+      }
+
+      @include when(finish) {
+        color: $--color-primary;
+      }
+    }
+
+    @include e(description) {
+      padding-right: 10%;
+      margin-top: -5px;
+      font-size: 12px;
+      line-height: 20px;
+      font-weight: normal;
+
+      @include when(process) {
+        font-weight: 700;
+        color: $--color-black;
+      }
+
+      @include when(wait) {
+        color: $--color-info;
+      }
+
+      @include when(success) {
+        color: $--color-success;
+      }
+
+      @include when(error) {
+        color: $--color-warning;
+      }
+
+      @include when(finish) {
+        color: $--color-primary;
+      }
+    }
+  }
   @include when(process) {
-    color: getCssVar("text-color", "primary");
-    border-color: getCssVar("text-color", "primary");
+    font-weight: 700;
+    color: $--color-black;
+    border-color: $--color-black;
   }
 
   @include when(wait) {
-    color: getCssVar("text-color", "placeholder");
-    border-color: getCssVar("text-color", "placeholder");
+    color: $--color-info;
+    border-color: $--color-info;
   }
 
   @include when(success) {
-    color: getCssVar("color-success");
-    border-color: getCssVar("color-success");
+    color: $--color-success;
+    border-color: $--color-success;
   }
 
   @include when(error) {
-    color: getCssVar("color-danger");
-    border-color: getCssVar("color-danger");
+    color: $--color-warning;
+    border-color: $--color-warning;
   }
 
   @include when(finish) {
-    color: getCssVar("color-primary");
-    border-color: getCssVar("color-primary");
+    color: $--color-primary;
+    border-color: $--color-primary;
   }
 }
