--- a/packages/theme-chalk/mixins/mixin.scss
+++ b/packages/theme-chalk/mixins/mixin.scss
@@ -43,12 +43,12 @@
   }
 }
 // &__header  => .tp-button__header
-@mixin e($element) {
-  @at-root {
-    #{& + $element-separator + $element} {
-      @content;
+@mixin e($element,) {
+    @at-root {
+      #{& + $element-separator + $element} {
+        @content;
+      }
     }
-  }
 }
 
 //处理button-type
