--- a/packages/theme-chalk/step.scss
+++ b/packages/theme-chalk/step.scss
@@ -3,8 +3,8 @@
 
 @include b(step) {
   position: relative;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   flex-shrink: 1;
   flex-basis: 50%;
   @include pseudo(last-of-type) {
@@ -31,6 +31,48 @@
     //   padding-right: 0;
     // }
   }
+  @include when(horizontal) {
+    display: inline-block;
+
+    @include e(line) {
+      height: 2px;
+      top: 11px;
+      left: 0;
+      right: 0;
+    }
+  }
+
+  @include when(vertical) {
+    display: flex;
+
+    @include e(head) {
+      flex-grow: 0;
+      width: 24px;
+    }
+
+    @include e(main) {
+      padding-left: 10px;
+      flex-grow: 1;
+    }
+
+    @include e(title) {
+      line-height: 24px;
+      padding-bottom: 8px;
+    }
+
+    @include e(line) {
+      width: 2px;
+      top: 0;
+      bottom: 0;
+      left: 11px;
+    }
+
+    @include e(icon) {
+      @include when(icon) {
+        width: 24px;
+      }
+    }
+  }
   @include e(line) {
     position: absolute;
     border-color: inherit;
@@ -39,6 +81,27 @@
     top: 11px;
     left: 0;
     right: 0;
+    @include when(process) {
+      font-weight: 700;
+      font-weight: bold;
+      background-color: $--color-black;
+    }
+
+    @include when(wait) {
+      background-color: $--color-info;
+    }
+
+    @include when(success) {
+      background-color: $--color-success;
+    }
+
+    @include when(error) {
+      background-color: $--color-warning;
+    }
+
+    @include when(finish) {
+      background-color: $--color-primary;
+    }
   }
 
   @include e(line-inner) {
@@ -74,6 +137,27 @@
     @include when(icon) {
       width: 40px;
     }
+    @include when(process) {
+      font-weight: 700;
+      font-weight: bold;
+      color: $--color-black;
+    }
+
+    @include when(wait) {
+      color: $--color-info;
+    }
+
+    @include when(success) {
+      color: $--color-success;
+    }
+
+    @include when(error) {
+      color: $--color-warning;
+    }
+
+    @include when(finish) {
+      color: $--color-primary;
+    }
   }
   @include e(icon-inner) {
     display: inline-block;
@@ -90,60 +174,60 @@
     flex-direction: column;
     align-items: stretch;
     flex-grow: 1;
-    @include e(title) {
-      font-size: 16px;
-      line-height: 38px;
+  }
+  @include e(title) {
+    font-size: 16px;
+    line-height: 38px;
 
-      @include when(process) {
-        font-weight: 700;
-        font-weight: bold;
-        color: $--color-black;
-      }
-
-      @include when(wait) {
-        color: $--color-info;
-      }
-
-      @include when(success) {
-        color: $--color-success;
-      }
-
-      @include when(error) {
-        color: $--color-warning;
-      }
-
-      @include when(finish) {
-        color: $--color-primary;
-      }
+    @include when(process) {
+      font-weight: 700;
+      font-weight: bold;
+      color: $--color-black;
     }
 
-    @include e(description) {
-      padding-right: 10%;
-      margin-top: -5px;
-      font-size: 12px;
-      line-height: 20px;
-      font-weight: normal;
+    @include when(wait) {
+      color: $--color-info;
+    }
 
-      @include when(process) {
-        font-weight: 700;
-        color: $--color-black;
-      }
+    @include when(success) {
+      color: $--color-success;
+    }
 
-      @include when(wait) {
-        color: $--color-info;
-      }
+    @include when(error) {
+      color: $--color-warning;
+    }
 
-      @include when(success) {
-        color: $--color-success;
-      }
+    @include when(finish) {
+      color: $--color-primary;
+    }
+  }
 
-      @include when(error) {
-        color: $--color-warning;
-      }
+  @include e(description) {
+    padding-right: 10%;
+    margin-top: -5px;
+    font-size: 12px;
+    line-height: 20px;
+    font-weight: normal;
 
-      @include when(finish) {
-        color: $--color-primary;
-      }
+    @include when(process) {
+      font-weight: 700;
+      color: $--color-black;
+    }
+
+    @include when(wait) {
+      color: $--color-info;
+    }
+
+    @include when(success) {
+      color: $--color-success;
+    }
+
+    @include when(error) {
+      color: $--color-warning;
+    }
+
+    @include when(finish) {
+      color: $--color-primary;
     }
   }
   @include when(process) {
