"开发了switch组件loading和beforeChange部分功能"

--- a/packages/theme-chalk/switch.scss
+++ b/packages/theme-chalk/switch.scss
@@ -103,6 +103,7 @@
     & .#{$namespace}-switch__core,
     & .#{$namespace}-switch__label {
       cursor: not-allowed;
+      opacity: 0.6;
     }
   }
 }
