开发了tag标签以及输入框

--- a/packages/theme-chalk/mixins/mixin.scss
+++ b/packages/theme-chalk/mixins/mixin.scss
@@ -57,6 +57,12 @@
   border-color: $border-color;
   background: $backgound;
 }
+//处理tag-type
+@mixin tag-type($color, $border-color, $backgound) {
+  color: $color;
+  border-color: $border-color;
+  background: $backgound;
+}
 
 //处理button-type
 @mixin message-type($color, $border-color, $backgound) {
